# trading_copilot

./: .dockerignore  .gitignore  LICENSE  README.md  STRATEGIES.md  india_stocks.csv  pyproject.toml  requirements.txt  us_stocks.csv
backtester/: .env.example  COMPLIANCE.md  __init__.py  cli.py  config.py  ui.py
backtester/agent/: __init__.py  date_range_infer.py  events.py  follow_up_suggestions.py  orchestrator.py  prompts.py  session.py  tools.py
backtester/api/: __init__.py  key_store.py  routes.py  server.py
backtester/compliance/: __init__.py  manifest.py  quiz.py  reproducibility.py  status.py
backtester/data/: corporate.py  downloader.py  interval.py  symbol_resolve.py
backtester/engine/: chart_renderer.py  code_generator.py  context_engine.py  executor.py  indicator_selector.py  invariants.py  iteration_engine.py  parameter_extractor.py  refine_engine.py  session.py  strategy_analyzer.py  validator.py
backtester/harness/: __init__.py  base_strategy.py  indicators.py  runner.py  test_suite.py
backtester/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  key_verify.py  model_catalog.py  nvidia_qwen_provider.py  openai_provider.py  router.py
backtester/output/: formatter.py
backtester/prompts/: templates.py
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  proxy.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BatchProgressModal.tsx  ChartView.tsx  Chat.tsx  ChatInput.tsx  (+12 more)
(+7 files in other folders)
